# soap

./: .env  .gitignore  README.md  dataobject.py  properties.py  pyproject.toml  requirements.txt  test.py  test2.py
src/: dataobject.py  entity.py  properties.py
src/soap/: entity.py  properties.py
tests/: test.py  test2.py
