[project]
name = "dataobject_hwkoene"
version = "0.0.1"
authors = [
  { name="Hans Koene", email="hwkoene@gmail.com" },
]
description = "Package providing a decorator for object persistence."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0",
    "Operating System :: OS Independent",
]
dependencies = [
  "pytz"
]

[project.urls]
Homepage = "https://github.com/hwkoene/dataobject"